<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete_note">Delete note</string>
    <string name="save_note">Save note</string>
    <string name="undo_delete">Undo delete</string>
</resources>