<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/titleOrderRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/dateOrderRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/titleOrderRadioButton"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/colorOrderRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        app:layout_constraintStart_toEndOf="@+id/dateOrderRadioButton"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/ascendingOrderRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ascending"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOrderRadioButton" />

    <RadioButton
        android:id="@+id/descendingOrderRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descending"
        app:layout_constraintStart_toEndOf="@+id/ascendingOrderRadioButton"
        app:layout_constraintTop_toTopOf="@+id/ascendingOrderRadioButton" />
</androidx.constraintlayout.widget.ConstraintLayout>